src/view/overview/render/snapshots/nifi_lens__view__overview__render__reporting_tasks_modal__tests__reporting_tasks_modal_detail_renders_full_content.snap
---
source: src/view/overview/render/reporting_tasks_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Reporting tasks · context: dev ──────────────────────────────────────────────────────────────────┐"
"│┏ Tasks (1) ━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Detail ────────────────────────────────────────────────┐│"
"│┃! PrometheusPushTask   60s    2t   ⚠ 2┃│PrometheusPushTask                                      ││"
"│┃                                      ┃│org.apache.nifi.reporting.prometheus.PrometheusPushRepo…││"
"│┃                                      ┃│id  task-full-001                                       ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│Scheduling                                              ││"
"│┃                                      ┃│  strategy            TIMER_DRIVEN                      ││"
"│┃                                      ┃│  period              60s                               ││"
"│┃                                      ┃│  state               RUNNING                           ││"
"│┃                                      ┃│  active threads      2                                 ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│Properties                                              ││"
"│┃                                      ┃│  API Password                [sensitive]               ││"
"│┃                                      ┃│  Endpoint URL                https://metrics.example.co││"
"│┃                                      ┃│  Metric Prefix               #{env_prefix}.nifi →      ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│Validation errors                                       ││"
"│┃                                      ┃│  • Endpoint URL must use HTTPS scheme                  ││"
"│┃                                      ┃│  • API Password is required                            ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│Recent bulletins (2)                                    ││"
"│┃                                      ┃│  05/01/2026 10:00:05 UTC WARNING  Retry attempt 2 of 3 ││"
"│┃                                      ┃│  05/01/2026 10:00:00 UTC ERROR  Connection refused to m││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└────────────────────────────────────────────────────────┘│"
"│[Esc] close · [/] find · [c] copy · [r] refresh                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
