src/view/overview/render/snapshots/nifi_lens__view__overview__render__reporting_tasks_modal__tests__reporting_tasks_modal_properties_focused.snap
---
source: src/view/overview/render/reporting_tasks_modal.rs
assertion_line: 827
expression: "format!(\"{}\", term.backend())"
---
"┌ Reporting tasks · context: prod-cluster ─────────────────────────────────────────────────────────┐"
"│┌ Tasks (5) ───────────────────────────┐┌ Identity ──────────────────────────────────────────────┐│"
"││● PrometheusReporting… 30s    1t   ✓  ││PrometheusReportingTask                                 ││"
"││● S2S Bulletin Report… 1m     0t   ✓  ││org.apache.nifi.reporting.prometheus.PrometheusReportin…││"
"││○ MonitorMemory        5m     0t   ✓  ││id  id-1                                                ││"
"││! MonitorDiskUsage     5m     0t   ⚠ 2││state               RUNNING  period  30s                ││"
"││○ StatusHistoryReport… 30s    0t   ✓  ││threads  1                                              ││"
"││                                      │└────────────────────────────────────────────────────────┘│"
"││                                      │┏ Properties (0) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"││                                      │┃KEY                          VALUE                      ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┃                                                        ┃│"
"││                                      │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"││                                      │┌ Recent bulletins (0) ──────────────────────────────────┐│"
"││                                      ││no bulletins in ring buffer                             ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"│└──────────────────────────────────────┘└────────────────────────────────────────────────────────┘│"
"│[Esc] close · [/] find · [c] copy · [r] refresh                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
