src/view/overview/render/snapshots/nifi_lens__view__overview__render__reporting_tasks_modal__tests__reporting_tasks_modal_renders_loading.snap
---
source: src/view/overview/render/reporting_tasks_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Reporting tasks · context: dev ──────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                             loading…                                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│[Esc] close · [/] find · [c] copy · [r] refresh                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
