src/view/overview/render/snapshots/nifi_lens__view__overview__render__reporting_tasks_modal__tests__reporting_tasks_modal_renders_ready.snap
---
source: src/view/overview/render/reporting_tasks_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Reporting tasks · context: prod-cluster ─────────────────────────────────────────────────────────┐"
"│┏ Tasks (5) ━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Detail ────────────────────────────────────────────────┐│"
"│┃● PrometheusReporting… 30s    1t   ✓  ┃│                                                        ││"
"│┃● S2S Bulletin Report… 1m     0t   ✓  ┃│                                                        ││"
"│┃○ MonitorMemory        5m     0t   ✓  ┃│                                                        ││"
"│┃! MonitorDiskUsage     5m     0t   ⚠ 2┃│                                                        ││"
"│┃○ StatusHistoryReport… 30s    0t   ✓  ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┃                                      ┃│                                                        ││"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└────────────────────────────────────────────────────────┘│"
"│[Esc] close · [/] find · [c] copy · [r] refresh                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
