src/view/overview/render/snapshots/nifi_lens__view__overview__render__reporting_tasks_modal__tests__reporting_tasks_modal_validation_focused.snap
---
source: src/view/overview/render/reporting_tasks_modal.rs
assertion_line: 880
expression: "format!(\"{}\", term.backend())"
---
"┌ Reporting tasks · context: prod-cluster ─────────────────────────────────────────────────────────┐"
"│┌ Tasks (5) ───────────────────────────┐┌ Identity ──────────────────────────────────────────────┐│"
"││● PrometheusReporting… 30s    1t   ✓  ││MonitorDiskUsage                                        ││"
"││● S2S Bulletin Report… 1m     0t   ✓  ││org.apache.nifi.controller.MonitorDiskUsage             ││"
"││○ MonitorMemory        5m     0t   ✓  ││id  id-4                                                ││"
"││! MonitorDiskUsage     5m     0t   ⚠ 2││state               RUNNING  period  5m                 ││"
"││○ StatusHistoryReport… 30s    0t   ✓  ││threads  0                                              ││"
"││                                      │└────────────────────────────────────────────────────────┘│"
"││                                      │┌ Properties (0) ────────────────────────────────────────┐│"
"││                                      ││KEY                          VALUE                      ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"││                                      │└────────────────────────────────────────────────────────┘│"
"││                                      │┏ Validation errors (2) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"││                                      │┃Property 'Directory Location' is required but is not set┃│"
"││                                      │┃Property 'Threshold' must be a valid percent value      ┃│"
"││                                      │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"││                                      │┌ Recent bulletins (0) ──────────────────────────────────┐│"
"││                                      ││no bulletins in ring buffer                             ││"
"││                                      ││                                                        ││"
"││                                      ││                                                        ││"
"│└──────────────────────────────────────┘└────────────────────────────────────────────────────────┘│"
"│[Esc] close · [/] find · [c] copy · [r] refresh                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
